
    Updated the "modules" example in order to use the use_module/2 directive
    (which is supported by Logtalk) instead of the use_module/1 directive
    (which is only supported for some back-end Prolog compilers) in the
    "client" module.

    Updated the "problog" example. Logtalk integration with ProbLog is
    improved it requires but the latest development version of ProbLog.

    Updated the "examples/tester.sh" script in order to also work when
    running Logtalk without using the installer packages or scripts.

    Updated the "build_release.sh" script in order to calculate all the
    necessary checksums when building the MacOS X installer package.

    Corrected a bug in the "logtalk_backend_select" shell script that
    prevented selecting GNU Prolog as the default back-end Prolog compiler.


2.41.1 - October 6, 2010

    Modified the compilation of objects that don't instantiate, specialize,
    or extend other objects in order to allow their use as roots of either
    class hierarchies or prototype hierarchies. This change simplifies the
    definition of class hierarchies when reflexive designs are not required.

    Added support for the blackboard built-in predicates (bb_put/2, bb_get/2,
    bb_delete/2, and bb_update/3) found on some Prolog compilers such as YAP
    and SICStus Prolog. Note that a Prolog compiler natively supporting these
    predicates is required. This support aims to facilitate porting of Prolog
    applications using the blackboard; these predicates should be avoided when
    writing portable Logtalk applications.

    Simplified the internal representation of entity prefixes and entity
    predicate functors. The new representation is also a bit more compact.

    Corrected a bug in the compilation of clauses for multifile predicates
    defined in the pseudo-object "user" where the execution context for the
    clause body goals would be undefined.
