@@ -1,5 +1,8 @@
 
 :- initialization((
-	logtalk_load([category, objects, database, plain, maze, benchmarks], [events(deny)]),
-	(current_logtalk_flag(modules, supported) -> ensure_loaded(module); true)
+	logtalk_load([category, objects, database, plain, maze, graph, benchmarks], [events(deny)])
 )).
+
+:- if(current_logtalk_flag(modules, supported)).
+	:- ensure_loaded(module).
+:- endif.
